--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-native-math-view",
   "version": "3.9.5",
   "description": "Math view for react-native",
-  "main": "src",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "esnext": "src",
   "nativePackage": true,
   "scripts": {
