--- a/tsconfig.json
+++ b/tsconfig.json
@@ -72,6 +72,11 @@
     "node_modules",
     "babel.config.js",
     "metro.config.js",
-    "jest.config.js"
+    "jest.config.js",
+    "MathExample",
+    "lib",
+    "android",
+    "ios",
+    "scripts"
   ]
 }
